Bug 15462 - Misidentified HP pavilion BIOS fails kernel suspend
Summary: Misidentified HP pavilion BIOS fails kernel suspend
Status: RESOLVED CODE_FIX
Alias: None
Product: IO/Storage
Classification: Unclassified
Component: Serial ATA (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Tejun Heo
URL:
Keywords:
Depends on:
Blocks: 7216
  Show dependency tree
 
Reported: 2010-03-06 21:52 UTC by bugzilla.usu0x
Modified: 2010-03-16 22:53 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.32
Tree: Mainline
Subsystem:
Regression: No


Attachments
dmidecode data (10.52 KB, text/plain)
2010-03-10 02:44 UTC, bugzilla.usu0x
Details
ahci-update-broken-suspend.patch (2.91 KB, patch)
2010-03-10 06:46 UTC, Tejun Heo
Details | Diff
dmesg output (49.50 KB, application/octet-stream)
2010-03-13 17:51 UTC, bugzilla.usu0x
Details

Description bugzilla.usu0x 2010-03-06 21:52:11 UTC
ahci_broken_suspend( ..... ) in the current git (from git browser interface) kernel misidentifies the new revision of HP dv6 laptops. It mistakenly believes that the new Core iX dv6 series laptops, with their BIOS revisions < F.21 (Currently F.13), do not support AHCI suspend. This causes suspend to fail on these laptops.

Bug also present in 2.6.32; filed downstream at https://bugs.launchpad.net/ubuntu/+source/linux/+bug/529477
Comment 1 Tejun Heo 2010-03-09 05:53:41 UTC
Aieee... so they reuse the product name *and* the BIOS revision.  Great. :-( I'll dig and see whether there's anything which differentiates them.
Comment 2 bugzilla.usu0x 2010-03-10 02:44:37 UTC
Created attachment 25442 [details]
dmidecode data
Comment 3 Tejun Heo 2010-03-10 06:46:37 UTC
Created attachment 25446 [details]
ahci-update-broken-suspend.patch

Does this patch fix the problem?  Thanks.
Comment 4 bugzilla.usu0x 2010-03-13 15:47:14 UTC
I can't really test at this time, but I'll see if I can't get someone downstream in Ubuntu to test it.
Comment 5 bugzilla.usu0x 2010-03-13 17:49:50 UTC
Patch seems to work without problems.
Comment 6 bugzilla.usu0x 2010-03-13 17:51:26 UTC
Created attachment 25498 [details]
dmesg output
Comment 7 Tejun Heo 2010-03-16 00:51:15 UTC
Patch posted upstream.  Resolving as fixed.  Thanks.
Comment 8 Chase Douglas 2010-03-16 21:40:09 UTC
Tejun,

Can you provide a link to the git tree where your fix has landed upstream? I've been unable to locate it myself.

Also, has this been sent to stable@kernel.org?

Thanks
Comment 9 Tejun Heo 2010-03-16 22:53:53 UTC
Hello, it hasn't landed anywhere yet.

  http://article.gmane.org/gmane.linux.ide/45467

But it will end up first in

  git://git.kernel.org/pub/scm/linux/kernel/git/jgarzik/libata-dev.git upstream-fixes

and then pulled into Linus' tree after a while and stable is cc'd.

Thanks.

Note You need to log in before you can comment on or make changes to this bug.